# nightshift

./: LICENSE  README.md  SPEC.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RECORDING.md  make-demo.py  make-run-script.py  make-shots.py  sample-digest.md
docs/shots/: hero.txt  init.txt  status.txt  watch.txt
nightaudit/: __init__.py  __main__.py  budget.py  checks.py  cli.py  config.py  cron.py  discover.py  events.py  lock.py  prompts.py  queue.py  report.py  scheduler.py  sessions.py  store.py
nightaudit/adapters/: __init__.py  _process.py  base.py  claude_code.py  codex.py  copilot.py
nightaudit/prompts/: code_review.md  dead_links.md  deps_audit.md  docs_drift.md  security_audit.md
nightshift/: __init__.py  cli.py  config.py  events.py  lock.py  queue.py  report.py  scheduler.py
nightshift/adapters/: base.py  claude_code.py  codex.py  copilot.py
site/: README.md  package-lock.json  package.json
site/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
site/app/docs/: page.tsx
site/app/docs/[slug]/: page.tsx
site/components/: busy-split.tsx  copy-button.tsx  digest-payoff.tsx  docs-nav.tsx  footer.tsx  hero-terminal.tsx  hero.tsx  logo.tsx  nav.tsx  pipeline.tsx
site/content/docs/: budget.md  checks.md  cli-reference.md  configuration.md  digest.md  installation.md  providers.md  quick-start.md  read-only.md  scheduling.md  tasks.md  troubleshooting.md  uninstall.md
site/lib/: docs.ts  run-script.generated.ts  run-script.ts
tests/: conftest.py  test_adapter_registry.py  test_budget.py  test_checks.py  test_checks_integration.py  test_claude_code_adapter.py  test_cli.py  test_codex_adapter.py  test_config.py  test_cron.py  test_discover.py  test_docs_site.py  test_events.py  test_lock.py  test_process.py  test_prompts.py  test_provider_pinning.py  test_queue.py  test_report.py  test_scheduler.py  test_site_is_real.py
