[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Everything else is `nightaudit` — the repo, the module, the command. The
# distribution stays `nightshift-cli` because PyPI has no rename: publishing
# under the new word would start an empty project and strand every existing
# `pipx install nightshift-cli` on 0.3.0 with nothing to tell it the tool moved.
# The `-cli` suffix is here because PyPI's `nightshift` belongs to Ian Fucci's
# NMR plotting tool. Users type `nightshift-cli` once, at install; the name they
# live with afterward is `nightaudit`.
name = "nightshift-cli"
version = "0.5.0"
description = "An audit doesn't change the books — read-only reviews of your projects while you're busy, one digest every morning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Md. Kishor Morol" }]
keywords = ["ai", "code-review", "claude-code", "codex", "automation", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  # cron and the CLIs' sandboxes; Windows only via WSL, which is Linux.
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
nightaudit = "nightaudit.cli:main"
# Deprecated, and the only reason an upgrade is not a breakage. 0.3.0's cron
# lines name this binary by absolute path; without it the upgrade deletes the
# command cron calls, and the failure surfaces as an hourly line in a log the
# user installed this tool specifically to stop reading. It prints a notice and
# does the job. Removing it is a breaking change, so it waits for 1.0.
nightshift = "nightaudit.cli:main"

[project.urls]
Homepage = "https://github.com/kishormorol/nightaudit"
Source = "https://github.com/kishormorol/nightaudit"
Issues = "https://github.com/kishormorol/nightaudit/issues"

[tool.hatch.build.targets.sdist]
# Allowlist, not excludes: the marketing site's node_modules is only ignored by a
# nested site/.gitignore, which hatchling's default selection does not honor.
include = [
  "/nightaudit",
  "/tests",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/SPEC.md",
  "/TODO.md",
]

[tool.hatch.build.targets.wheel]
packages = ["nightaudit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
